# plusScripts

./: .gitignore  README.md  run_install
+/: +DS-downloadAndFlash  +autogit  +autogit_add  +autogit_pull  +autogit_remove  +backupHomeFolderTo  +bak  +bratpit-clean  +bratpit-extract  +bratpit-fetch  +bratpit-getDeviceVersion  +bucket-url  +build  +cargo_build_send  +cc-crossCompileHal  +cc-deployDebug  +cc-device-debug-tools-test  +cc-gcloudLogin  +cc-npmTest  +cc-releaseHal  +cc-timeDiff  +cc-toip  +cc_getRawAccelLogs  +cc_imageBuild  +cc_sourceEverything  +cc_ssh_copyToRemote  +clear-all-logs  +convert  +deleteFolder  +deploy-cc-update  +deployApp  +deployDebug  +device-debug-tools-test  +dns_get  +downloadRelease  +extract  +extract-bratpit  +extract-everything  +extract-rawAccel  +files  (+84 more)
RBTW/: RBTW  RBTW.desktop
build-recepies/: facit  firmware  firmware-hal  firmware-yocto  firmware_hal  firmware_yocto  gps-debug-tool  manducapp-rust  vehicle-configs
config/: bashrc_stuff  evremap_my_map.conf  install_arch.md  keyRemapConf.toml  recover.txt  zshrc_stuff
install/: Text  Text\  Xmodmap  chmodScripts  install
persist-defaults/: feature-flags  remote-service-list
releases/: 580  582  584  588  591  592  593  594  600  600.old  601  602  603  606  607  614  615  616  619  620  633  634  637  638  641  642  643  647  accel2  debug  master  pre-release-test  v4
rov_command_and_conquer/: cmd_handler.rb  (+5 more)
workers/plus-lookup/: Cargo.toml  scma.json
workers/plus-lookup/res/: query  query.rs  scma.json  update-schema.sh
workers/plus-lookup/src/: main.rs
(+32 files in other folders)
