[package]
name = "plus-lookup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
graphql_client = { version = "0.13", features = ["reqwest"] }
clap = { version = "4.4.14", features = ["derive"] }
thiserror = "1.0"
serde_json = "1.0"
